apps/searxng/service-searxng.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: searxng
  name: searxng
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: searxng
